--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
     "requires": [],
     "optional": [],
     "author": "bbonvi",
+    "homePage": "https://github.com/bbonvi/SillyTavern-Repetition-Inspector",
     "version": "1.0.0",
     "auto_update": true
 }
